crates/nash-can/src/snapshots/nash_can__pattern__tests__tuple_four.snap
---
source: crates/nash-can/src/pattern.rs
description: "( a, b, c, d )"
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 15,
            },
        },
        value: Tuple {
            first: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            second: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 7,
                    },
                },
                value: Var(
                    "b",
                ),
            },
            rest: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 10,
                        },
                    },
                    value: Var(
                        "c",
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 12,
                        },
                        end: Position {
                            line: 1,
                            column: 13,
                        },
                    },
                    value: Var(
                        "d",
                    ),
                },
            ],
        },
    },
    {
        "a": Region {
            start: Position {
                line: 1,
                column: 3,
            },
            end: Position {
                line: 1,
                column: 4,
            },
        },
        "b": Region {
            start: Position {
                line: 1,
                column: 6,
            },
            end: Position {
                line: 1,
                column: 7,
            },
        },
        "c": Region {
            start: Position {
                line: 1,
                column: 9,
            },
            end: Position {
                line: 1,
                column: 10,
            },
        },
        "d": Region {
            start: Position {
                line: 1,
                column: 12,
            },
            end: Position {
                line: 1,
                column: 13,
            },
        },
    },
)
