crates/nash-can/src/snapshots/nash_can__pattern__tests__unit.snap
---
source: crates/nash-can/src/pattern.rs
description: ()
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 3,
            },
        },
        value: Unit,
    },
    {},
)
