crates/nash-can/src/snapshots/nash_can__pattern__tests__wildcard.snap
---
source: crates/nash-can/src/pattern.rs
description: _
---
(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 2,
            },
        },
        value: Anything,
    },
    {},
)
